fix: menu toggling in mobile view, scroll top animation, section spacing

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -56,7 +56,7 @@ h1.color-secondary,h2.color-secondary,h3.color-secondary,h4.color-secondary,h5.c
 }
 
 .section-pad.nopb {
-    padding-bottom: 225px;
+    padding-bottom: 100px;
 }
 
 /* expertise icon */
